@@ -378,26 +378,19 @@
    </requestHandler>
 
   
-  <!-- Standard update plugin.  If we put this on /update, it will get all the new goodness  -->
-  <requestHandler name="/update/xml" class="solr.XmlUpdateRequestHandler" >
-    <!--
-    <lst name="defaults">
-     <str name="name">value</str>
-    </lst>
+  <!-- Update request handler.  
+  
+       Note: Since solr1.1 requestHandlers requires a valid content type header if posted in 
+       the body. For example, curl now requires: -H 'Content-type:text/xml; charset=utf-8'
+       The response format differs from solr1.1 formatting and returns a standard error code.
+       
+       To enable solr1.1 behavior, remove the /update handler or change its path
     -->
-  </requestHandler>
+  <requestHandler name="/update" class="solr.XmlUpdateRequestHandler" />
 
-  <requestHandler name="/debug/dump" class="solr.DumpRequestHandler" >
-    <lst name="defaults">
-     <str name="echoParams">explicit</str> <!-- for all params (including the default etc) 'all' -->
-     <str name="echoHandler">true</str>
-    </lst>
-  </requestHandler>
-  
-  
   <!-- CSV update handler, loaded on demand -->
-  <requestHandler name="/update/csv" class="solr.CSVRequestHandler" startup="lazy">
-  </requestHandler>
+  <requestHandler name="/update/csv" class="solr.CSVRequestHandler" startup="lazy" />
+
 
   <!-- Admin Handlers.  TODO? There could be a single handler that loads them all... -->
   <requestHandler name="/admin/luke"       class="org.apache.solr.handler.admin.LukeRequestHandler" />
@@ -406,6 +399,13 @@
   <requestHandler name="/admin/threads"    class="org.apache.solr.handler.admin.ThreadDumpHandler" />
   <requestHandler name="/admin/properties" class="org.apache.solr.handler.admin.PropertiesRequestHandler" />
   
+  <!-- Echo the request contents back to the client -->
+  <requestHandler name="/debug/dump" class="solr.DumpRequestHandler" >
+    <lst name="defaults">
+     <str name="echoParams">explicit</str> <!-- for all params (including the default etc) use: 'all' -->
+     <str name="echoHandler">true</str>
+    </lst>
+  </requestHandler>
   
   <!-- queryResponseWriter plugins... query responses will be written using the
     writer specified by the 'wt' request parameter matching the name of a registered
